append tasks to the DOM, including checkbox

--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -3,8 +3,8 @@ body{
     background-color: aquamarine;
 }
 /* styling found on W3Schools, for check-box */
-/* The container */
-.container {
+/* The check-container */
+.check-container {
     display: block;
     position: relative;
     padding-left: 35px;
@@ -18,7 +18,7 @@ body{
   }
   
   /* Hide the browser's default checkbox */
-  .container input {
+  .check-container input {
     position: absolute;
     opacity: 0;
     cursor: pointer;
@@ -37,12 +37,12 @@ body{
   }
   
   /* On mouse-over, add a grey background color */
-  .container:hover input ~ .checkmark {
+  .check-container:hover input ~ .checkmark {
     background-color: #ccc;
   }
   
   /* When the checkbox is checked, add a blue background */
-  .container input:checked ~ .checkmark {
+  .check-container input:checked ~ .checkmark {
     background-color: #2196F3;
   }
   
@@ -54,12 +54,12 @@ body{
   }
   
   /* Show the checkmark when checked */
-  .container input:checked ~ .checkmark:after {
+  .check-container input:checked ~ .checkmark:after {
     display: block;
   }
   
   /* Style the checkmark/indicator */
-  .container .checkmark:after {
+  .check-container .checkmark:after {
     left: 9px;
     top: 5px;
     width: 5px;
