getting the checkmarks working

--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -24,6 +24,9 @@ table {
     border: double 12px darkcyan;
 }
 
+tr{
+    height: 50px;
+}
 .marked {
     background-color: lemonchiffon;
 }
@@ -39,7 +42,7 @@ table {
     padding-left: 35px;
     margin-bottom: 12px;
     cursor: pointer;
-    font-size: 22px;
+    font-size: 20px;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
