--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -53,7 +53,8 @@ th {
     color: darkslategrey;
     font-weight: 700;
 }
-/* styling found on W3Schools, for check-box */
+
+/* styling below was found on W3Schools, for custom check-box */
 /* The check-container */
 .check-container {
     display: block;
@@ -115,7 +116,7 @@ th {
     top: 5px;
     width: 5px;
     height: 10px;
-    border: solid white;
+    border: solid ivory;
     border-width: 0 3px 3px 0;
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
