--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -26,18 +26,21 @@ table {
     margin-top: 10%;
     padding: 2%;
     border: double 12px darkcyan;
+    border-radius: 5px;
 }
 
 tr, td{
     height: 50px;
     padding: 3px;
-    border: solid 2px darkcyan;
+    border: double 4px aquamarine;
     margin-bottom: 5px;
+    border-radius: 10px;
 }
 
 th {
     border: solid 6px darkcyan;
-
+    font-size: large;
+    color: darkslategrey;
 }
 
 .marked {
@@ -61,6 +64,7 @@ th {
     position: relative;
     padding-left: 35px;
     margin-bottom: 12px;
+    border-radius: 4px;
     cursor: pointer;
     font-size: 20px;
     -webkit-user-select: none;
@@ -86,6 +90,7 @@ th {
     height: 25px;
     width: 25px;
     background-color: #eee;
+    border-radius: 4px;
   }
   
   /* On mouse-over, add a grey background color */
